src/objects/Customer_Meeting_Internal_Attendee__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Meeting__c</fullName>
        <label>Customer Meeting</label>
        <referenceTo>Customer_Meeting__c</referenceTo>
        <relationshipName>Customer_Meeting_Internal_Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Internal_Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Attendee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Meeting_Internal_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Internal_Attendee__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>Meeting Internal Attendee</label>
    <nameField>
        <displayFormat>IntAttendee-{0}</displayFormat>
        <label>Internal Attendee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Internal Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>